# mandelbrot-lovejoy-rain

./: LICENSE  README.md  mandelbrot-lovejoy-rain.cabal  stack.yaml
src/: Acc.hs  Main.hs  Massiv.hs
