Cabal-version:  1.12
Name:           mandelbrot-lovejoy-rain
Version:        0.1.0.0
Description:    Please see the README on GitHub at <https://github.com/jaspervdj/mandelbrot-lovejoy-rain#readme>
Homepage:       https://github.com/jaspervdj/mandelbrot-lovejoy-rain#readme
Bug-reports:    https://github.com/jaspervdj/mandelbrot-lovejoy-rain/issues
Author:         Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:     Jasper Van der Jeugt <m@jaspervdj.be>
Copyright:      2019 Jasper Van der Jeugt
License:        BSD3
License-file:   LICENSE
Build-type:     Simple

Source-repository head
  Type: git
  Location: https://github.com/jaspervdj/mandelbrot-lovejoy-rain

Executable mlr-accelerate
  Main-is:         Acc.hs
  Hs-source-dirs:  src
  Ghc-options:     -O2 -threaded -rtsopts
                   -with-rtsopts=-N
                   -with-rtsopts=-n2M
                   -with-rtsopts=-A64M
  Default-language: Haskell2010

  Build-depends:
    QuickCheck             >= 2.12 && < 2.13,
    accelerate             >= 1.2  && < 1.3,
    accelerate-io          >= 1.2  && < 1.3,
    accelerate-llvm-native >= 1.2  && < 1.3,
    base                   >= 4.7  && < 5,
    colour-accelerate      >= 0.3  && < 0.4

Executable mlr-massiv
  Main-is:         Massiv.hs
  Hs-source-dirs:  src
  Ghc-options:     -O2 -threaded -rtsopts -with-rtsopts=-N
  Default-language: Haskell2010

  Build-depends:
    base        >= 4.7  && < 5,
    JuicyPixels >= 3.3  && < 3.4,
    massiv      >= 0.4  && < 0.5,
    massiv-io   >= 0.1  && < 0.2,
    mwc-random  >= 0.14 && < 1.15,
    primitive   >= 0.6  && < 0.7
