Cabal-version:  1.12
Name:           mandelbrot-lovejoy-rain
Version:        0.1.0.0
Description:    Please see the README on GitHub at <https://github.com/jaspervdj/mandelbrot-lovejoy-rain#readme>
Homepage:       https://github.com/jaspervdj/mandelbrot-lovejoy-rain#readme
Bug-reports:    https://github.com/jaspervdj/mandelbrot-lovejoy-rain/issues
Author:         Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:     Jasper Van der Jeugt <m@jaspervdj.be>
Copyright:      2019 Jasper Van der Jeugt
License:        BSD3
License-file:   LICENSE
Build-type:     Simple

Source-repository head
  Type: git
  Location: https://github.com/jaspervdj/mandelbrot-lovejoy-rain

Executable mlr-massiv
  Main-is:         Massiv.hs
  Hs-source-dirs:  src
  Ghc-options:     -O2 -threaded -rtsopts -with-rtsopts=-N
  Default-language: Haskell2010

  Build-depends:
    JuicyPixels >= 3.3  && < 3.4,
    base        >= 4.7  && < 5,
    massiv      >= 0.4  && < 0.5,
    massiv-io   >= 0.1  && < 0.2,
    mwc-random  >= 0.14 && < 1.15,
    primitive   >= 0.6  && < 0.7,
    scheduler   >= 1.4  && < 1.5,
    vector      >= 0.12 && < 0.13
